--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project image"/>
 
     <hr>
-    <a href="./public/contact.html">Contac Me</a>
+    <a href="./public/contact.html">Contact Me</a>
     <a href="./public/about.html">About Me</a>
 </body>
 
